--- a/indexEn.html
+++ b/indexEn.html
@@ -11,24 +11,12 @@
 <!--     [endif] -->
     <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1'>
 
-<!-- <!- Twitter Card data -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Ladygravos">
-    <meta name="twitter:title" content="Katalina Nadasi says: hey! Take a look on my work">
-    <meta name="twitter:description" content="Katalina's resume.">
-    <meta name="twitter:creator" content="@Ladygravos">
-    <meta name="twitter:image:src" content="img/twitter-card.png"> -->
-    <!-- Open Graph data -->
-    <!-- <meta property="og:title" content="Amazing website"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.katalinanadasi.com/"/>
-    <meta property="og:image" content="img/facebook_card.png"/>
-    <meta property="og:description" content="Hey! Take a look on my work!"/> -->
     <!-- link sheets -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -368,14 +356,13 @@
   <!--   END PRESS -->
 
   <!-- SCREENSHOTS -->
-
   <div class="screenshots" id="work">
     <div class="container">
 
       <div class="row">
       <div class="col-lg-12 col-md-12">
 
-      <h1>TAKE A LOOK AT MY RECENT WORK</h1>
+      <h1 lang="fr">TAKE A LOOK AT MY RECENT WORK</h1>
       <p>View some of the screenshots from my recent work</p>
 
 
@@ -384,70 +371,70 @@
 
       <div class="row">
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
-        <img class="recent-work-img" src="img/screenshots/eavest.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
+        <img src="img/screenshots/eavest.png" class="img-thumbnail" alt="eavest" width="304" height="236">
         <div class="over">
             <span class="more">
               <h1>Eavest</h1>
               <p>FrontEnd part in all the new website</p>
-              <p>Online soon (August-sept 2017)</p></br>
-              <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Website</button></a>
+              <p>Online soon (August-sept 2017)</p>
+              <a href="http://eavest.com/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <img class="recent-work-img" src="img/screenshots/adaweek.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
+        <img src="img/screenshots/adaweek.png" class="img-thumbnail" alt="adaweek" width="304" height="236">
         <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
-              <p>Design and developpement of all the website</p></br></br>
-              <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Website</button></a>
+              <p>Design and developpement of all the website</p>
+              <a href="http://www.adaweek.fr/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
-        <img class="recent-work-img" src="img/screenshots/labanquepostale.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
+        <img src="img/screenshots/labanquepostale.png" class="img-thumbnail" alt="La Banque Postale" width="304" height="236">
         <div class="over">
             <span class="more">
               <h1>La banque postale</h1>
               <p>Developpement of a online quiz</p>
               <p>FrontEnd - Angular 1.5</p>
-              <p>Website not online anymore (the quiz ends)</p>
+              <p>Website not online anymore (quiz ends)</p>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
-        <img class="work-img" src="img/screenshots/sneakr.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
+        <img src="img/screenshots/sneakr.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
         <div class="over">
-            <span class="more-tall">
+            <span class="more">
               <h1>Sneakr</h1>
-              <p>Design and developpement / Ruby</p>
-              <p>Search-engine of Sneakrs</p>
-              <p>Scraping, parsing, design, developpement</p>
-              <p>Not online anymore <br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">View project on Github</button></a></p>
+              <p>Design and developpement / Ruby
+              Search-engine of Sneakrs
+              Scraping, parsing, design, developpement</p>
+              <a href="https://github.com/KatalinaNadasi/Sneakr" target="_blank"><button class="btn-primary">View project</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <img class="work-img" src="img/screenshots/template.png"></br>
-        <div class="over">
-            <span class="more-tall">
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
+        <img src="img/screenshots/template.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
+          <div class="over">
+            <span class="more">
               <h1>Hologram</h1>
               <p>Developpement of templates / Html5 - CSS3</p>
             </span>
-        </div>
+          </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
-        <img class="work-img" src="img/screenshots/adablog.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
+        <img src="img/screenshots/adablog.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
         <div class="over">
-            <span class="more-tall">
+            <span class="more">
               <h1>Blogs</h1>
-              <p>Blogs / Wordpress</p>
+              <p>Réalisation des divers blogs sous Wordpress</p>
             </span>
         </div>
       </div>
@@ -474,31 +461,31 @@
           <form class="form-horizontal">
             <div class="form-group">
               <label class="control-label col-sm-2" for="name"></label>
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="name" class="form-control" id="name" placeholder="Name">
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2" for="first-name"></label>
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="text" class="form-control" id="fname" placeholder="First name">
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2" for="phone"></label>
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="number" class="form-control" id="pnumber" placeholder="Phone number">
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2" for="objet"></label>
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="text" class="form-control" id="objet" placeholder="About">
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2" for="message"></label>
-              <div class="col-sm-10">
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <textarea class="form-control" id="message" name="message" rows="10" cols="4" placeholder="Message"></textarea>
                 <button type="submit" class="btn btn-default">Send</button>
               </div>
@@ -516,6 +503,7 @@
         <li class="wow fadeIn" data-wow-delay="O.2s"><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.3s"><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.4s"><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+        <!-- <li class="wow fadeIn" data-wow-delay="O.5s"><a href="https://www.freecodecamp.com/katalinanadasi" target="blank"><i class="a fa-free-code-camp fa-4x" aria-hidden="true"></i></a></li> -->
       </ul>
     </div>
 
