--- a/indexFr.html
+++ b/indexFr.html
@@ -11,23 +11,11 @@
 <!--     [endif] -->
     <meta name='viewport' content='user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1'>
 
-<!-- <!- Twitter Card data -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@Ladygravos">
-    <meta name="twitter:title" content="Katalina Nadasi says: hey! Take a look on my work">
-    <meta name="twitter:description" content="Katalina's resume.">
-    <meta name="twitter:creator" content="@Ladygravos">
-    <meta name="twitter:image:src" content="img/twitter-card.png"> -->
-    <!-- Open Graph data -->
-    <!-- <meta property="og:title" content="Amazing website"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="http://www.katalinanadasi.com/"/>
-    <meta property="og:image" content="img/facebook_card.png"/>
-    <meta property="og:description" content="Hey! Take a look on my work!"/> -->
     <!-- link sheets -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/siteDemo.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -380,68 +368,67 @@
 
       <div class="row">
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
-        <img class="recent-work-img" src="img/screenshots/eavest.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
+        <img src="img/screenshots/eavest.png" class="img-thumbnail" alt="eavest" width="304" height="236">
         <div class="over">
             <span class="more">
               <h1>Eavest</h1>
               <p>Refonte du nouveau site, réalisation de toute la partie FrontEnd</p>
-              <p>Site bientôt en ligne (juillet 2017)</p><br />
-              <a href="http://eavest.com/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
+              <p>En ligne à la rentrée 2017</p>
+              <a href="http://eavest.com/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <img class="recent-work-img" src="img/screenshots/adaweek.png"></br>
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
+        <img src="img/screenshots/adaweek.png" class="img-thumbnail" alt="adaweek" width="304" height="236">
         <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
-              <p>Création du design et réalisation du site</p><br /><br />
-              <a href="http://www.adaweek.fr/"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
+              <p>Création du design et réalisation du site</p>
+              <a href="http://www.adaweek.fr/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
-        <img class="recent-work-img" src="img/screenshots/labanquepostale.png"></br>
-        <div class="over">
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
+        <img src="img/screenshots/labanquepostale.png" class="img-thumbnail" alt="La Banque Postale" width="304" height="236">
+        <div class="over hidden-xs hidden-sm hidden-md">
             <span class="more">
               <h1>La banque postale</h1>
-              <p>Création d'un mini-site de jeu concours</p>
-              <p>Développement FrontEnd - Angular 1.5</p>
-              <p>Jeu-concours terminé (site non actif)</p>
+              <p>Création d'un mini-site <br/>(jeu concours) <br/>
+              Développement FrontEnd <br/>sous Angular 1.5<br/>
+              Jeu-concours terminé (non actif)</p>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.2s">
-        <img class="work-img" src="img/screenshots/sneakr.png"></br>
-        <div class="over">
-            <span class="more-tall">
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
+        <img src="img/screenshots/sneakr.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
+        <div class="over hidden-xs hidden-sm hidden-md">
+            <span class="more">
               <h1>Sneakr</h1>
-              <p>Création / développement en Ruby / design</p>
-              <p>Version-démo d'un moteur de recherche de Sneakr à petit prix</p>
-              <p>Scraping, parsing, design, développement (projet à deux)</p>
-              <p>Site non disponible<br/><br/><br/><a href="https://github.com/KatalinaNadasi/Sneakr"><button class="btn-primary">Voir projet sur Github</button></a></p>
+              <p>Version béta d'un moteur de recherche de Sneakr à petit prix
+              Scraping, parsing, design, développement en Ruby</p>
+              <a href="https://github.com/KatalinaNadasi/Sneakr" target="_blank"><button class="btn-primary">Voir projet sur Github</button></a>
             </span>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.3s">
-        <img class="work-img" src="img/screenshots/template.png"></br>
-        <div class="over">
-            <span class="more-tall">
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
+        <img src="img/screenshots/template.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
+          <div class="over hidden-xs hidden-sm hidden-md">
+            <span class="more">
               <h1>Hologram</h1>
               <p>Développement de template / <br/> Html - CSS</p>
             </span>
-        </div>
+          </div>
       </div>
 
-      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow flipInY" data-wow-delay:"0.4s">
-        <img class="work-img" src="img/screenshots/adablog.png"></br>
-        <div class="over">
-            <span class="more-tall">
+      <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
+        <img src="img/screenshots/adablog.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
+        <div class="over hidden-xs hidden-sm hidden-md">
+            <span class="more">
               <h1>Blogs</h1>
               <p>Réalisation des divers blogs sous Wordpress</p>
             </span>
@@ -466,41 +453,41 @@
       <h1 lang="fr">Parlons-en !</h1>
 
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-sm-12 col-lg-6 col-md-6">
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="control-label col-sm-2" for="name"></label>
-              <div class="col-sm-10">
+              <label class="control-label" for="name"></label>
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="name" class="form-control" id="name" placeholder="Nom">
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="first-name"></label>
-              <div class="col-sm-10">
+              <label class="control-label" for="first-name"></label>
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="text" class="form-control" id="fname" placeholder="Prénom">
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="phone"></label>
-              <div class="col-sm-10">
+              <label class="control-label" for="phone"></label>
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="number" class="form-control" id="pnumber" placeholder="Numéro de téléphone">
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="objet"></label>
-              <div class="col-sm-10">
+              <label class="control-label" for="objet"></label>
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <input type="text" class="form-control" id="objet" placeholder="Objet">
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2" for="message"></label>
-              <div class="col-sm-10">
+              <label class="control-label" for="message"></label>
+              <div class="col-sm-12 col-md-offset-2 col-md-10">
                 <textarea class="form-control" id="message" name="message" rows="10" cols="4" placeholder="Message"></textarea>
                 <button type="submit" class="btn btn-default">Envoyer</button>
               </div>
             </div>
           </div>
-          <div class="col-md-offset-1 col-md-4 form-group">
+          <div class="col-sm-12 col-md-offset-1 col-md-4 form-group">
             <p>Envie d'en savoir plus sur mon expérience, mes connaissances ?<br/> Besoin de vous procurer mon cv, avoir des conseils pour devenir développeur, d'autres questions concernant l'univers ou le sens de la vie, ou simplement boire un café dans la plus belle ville du monde ?<br/> Sentez-vous libre de m'envoyer un petit message.<br/>Je promets de répondre A.S.A.P.<br/>
             Note : pas de spam, merci :)</p>
           </div>
@@ -513,6 +500,7 @@
         <li class="wow fadeIn" data-wow-delay="O.2s"><a href="mailto:katalina.nadasi@gmail.com" target="blank"><i class="fa fa-envelope-o fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.3s"><a href="https://www.linkedin.com/in/katalina-nadasi-5679b528?trk=hp-identity-name" target="blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a></li>
         <li class="wow fadeIn" data-wow-delay="O.4s"><a href="https://github.com/KatalinaNadasi" target="blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a></li>
+        <!-- <li class="wow fadeIn" data-wow-delay="O.5s"><a href="https://www.freecodecamp.com/katalinanadasi" target="blank"><i class="fa fa-free-code-camp fa-4x" aria-hidden="true"></i></a></li> -->
       </ul>
     </div>
 
