--- a/indexEn.html
+++ b/indexEn.html
@@ -372,43 +372,43 @@
       <div class="row">
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
-        <img src="img/screenshots/eavest.png" class="img-thumbnail" alt="eavest" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/eavest.png" class="thumbnail" alt="eavest" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Eavest</h1>
               <p>FrontEnd part in all the new website</p>
               <p>Online soon (August-sept 2017)</p>
               <a href="http://eavest.com/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
-        <img src="img/screenshots/adaweek.png" class="img-thumbnail" alt="adaweek" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/adaweek.png" class="thumbnail" alt="adaweek" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
               <p>Design and developpement of all the website</p>
               <a href="http://www.adaweek.fr/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
-        <img src="img/screenshots/labanquepostale.png" class="img-thumbnail" alt="La Banque Postale" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/labanquepostale.png" class="thumbnail" alt="La Banque Postale" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>La banque postale</h1>
               <p>Developpement of a online quiz</p>
               <p>FrontEnd - Angular 1.5</p>
               <p>Website not online anymore (quiz ends)</p>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
-        <img src="img/screenshots/sneakr.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/sneakr.png" class="thumbnail" alt="sneakr" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Sneakr</h1>
               <p>Design and developpement / Ruby
@@ -416,27 +416,27 @@
               Scraping, parsing, design, developpement</p>
               <a href="https://github.com/KatalinaNadasi/Sneakr" target="_blank"><button class="btn-primary">View project</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
-        <img src="img/screenshots/template.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-          <div class="over">
+        <img src="img/screenshots/template.png" class="thumbnail" alt="sneakr" width="304" height="236">
+          <!-- <div class="over">
             <span class="more">
               <h1>Hologram</h1>
               <p>Developpement of templates / Html5 - CSS3</p>
             </span>
-          </div>
+          </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
-        <img src="img/screenshots/adablog.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/adablog.png" class="thumbnail" alt="sneakr" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Blogs</h1>
               <p>Réalisation des divers blogs sous Wordpress</p>
             </span>
-        </div>
+        </div> -->
       </div>
 
       </div>
@@ -456,7 +456,7 @@
     <div class="col-lg-12 col-md-12">
       <h1 lang="en">Let's talk about it !</h1>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-6 col-md-6">
           <form class="form-horizontal">
             <div class="form-group">
@@ -496,7 +496,7 @@
           </div>
         </div>
       </form>
-      <br /><br />
+      <br /><br /> -->
 
 
       <ul class="list-inline">
