--- a/indexFr.html
+++ b/indexFr.html
@@ -369,70 +369,70 @@
       <div class="row">
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
-        <img src="img/screenshots/eavest.png" class="img-thumbnail" alt="eavest" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/eavest.png" class="thumbnail" alt="eavest" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Eavest</h1>
               <p>Refonte du nouveau site, réalisation de toute la partie FrontEnd</p>
               <p>En ligne à la rentrée 2017</p>
               <a href="http://eavest.com/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
-        <img src="img/screenshots/adaweek.png" class="img-thumbnail" alt="adaweek" width="304" height="236">
-        <div class="over">
+        <img src="img/screenshots/adaweek.png" class="thumbnail" alt="adaweek" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Adaweek</h1>
               <p>Création du design et réalisation du site</p>
               <a href="http://www.adaweek.fr/" target="_blank"><button class="btn-primary" type="button" name="button">Voir le site</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
-        <img src="img/screenshots/labanquepostale.png" class="img-thumbnail" alt="La Banque Postale" width="304" height="236">
-        <div class="over hidden-xs hidden-sm hidden-md">
+        <img src="img/screenshots/labanquepostale.png" class="thumbnail" alt="La Banque Postale" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>La banque postale</h1>
               <p>Création d'un mini-site <br/>(jeu concours) <br/>
               Développement FrontEnd <br/>sous Angular 1.5<br/>
               Jeu-concours terminé (non actif)</p>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.2s">
-        <img src="img/screenshots/sneakr.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-        <div class="over hidden-xs hidden-sm hidden-md">
+        <img src="img/screenshots/sneakr.png" class="thumbnail" alt="sneakr" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Sneakr</h1>
               <p>Version béta d'un moteur de recherche de Sneakr à petit prix
               Scraping, parsing, design, développement en Ruby</p>
               <a href="https://github.com/KatalinaNadasi/Sneakr" target="_blank"><button class="btn-primary">Voir projet sur Github</button></a>
             </span>
-        </div>
+        </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.3s">
-        <img src="img/screenshots/template.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-          <div class="over hidden-xs hidden-sm hidden-md">
+        <img src="img/screenshots/template.png" class="thumbnail" alt="sneakr" width="304" height="236">
+          <!-- <div class="over">
             <span class="more">
               <h1>Hologram</h1>
               <p>Développement de template / <br/> Html - CSS</p>
             </span>
-          </div>
+          </div> -->
       </div>
 
       <div class="col-md-4 col-sm-12 wow flipInY" data-wow-delay:"0.4s">
-        <img src="img/screenshots/adablog.png" class="img-thumbnail" alt="sneakr" width="304" height="236">
-        <div class="over hidden-xs hidden-sm hidden-md">
+        <img src="img/screenshots/adablog.png" class="thumbnail" alt="sneakr" width="304" height="236">
+        <!-- <div class="over">
             <span class="more">
               <h1>Blogs</h1>
               <p>Réalisation des divers blogs sous Wordpress</p>
             </span>
-        </div>
+        </div> -->
       </div>
 
       </div>
@@ -452,7 +452,7 @@
     <div class="col-lg-12 col-md-12">
       <h1 lang="fr">Parlons-en !</h1>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-12 col-lg-6 col-md-6">
           <form class="form-horizontal">
             <div class="form-group">
@@ -493,7 +493,7 @@
           </div>
         </div>
       </form>
-      <br /><br />
+      <br /><br /> -->
 
 
       <ul class="list-inline">
